<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">129199171153011</string>
    <string name="fb_login_protocol_scheme">fb129199171153011</string>

    <string name="app_name">Bancuri bune</string>
    <string name="add_joke">Adaugă banc</string>
    <string name="added_by_label">"Adăugat de: "</string>
    <string name="add_limit_reached">Ai ajuns la limita de %s adăugări pe zi. Revino mâine pentru a adăuga un banc nou.</string>
    <string name="add_success">Am adăugat bancul cu success! După aprobare va fi vizibil în aplicație..</string>
    <string name="add_failed">Nu am putut adăuga bancul. Te rog să încerci mai târziu.</string>
    <string name="my_jokes_title">Bancurile mele</string>
    <string name="approved">aprobat</string>
    <string name="not_approved">așteaptă aprobare</string>
    <string name="add_joke_hint">Adaugă bancul tău aici…</string>
    <string name="facebook_login">Login cu Facebook</string>
    <string name="loading_data">Încarc bancul cu pești…</string>
    <string name="add_joke_empty">Nu ai adăugat nimic</string>
    <string name="admin_title">Bancuri de aprobat</string>
    <string name="total_points">"Total puncte: %s"</string>
    <string name="no_internet">Nu am putut detecta o conexiune la internet. Te rog să activezi conexiunea de date sau Wifi.</string>
    <string name="nextRank">Următorul rang in %s like-uri</string>
    <string name="rankLabel">Rang: %s</string>
    <string name="register">Înregistrează-te</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Parolă</string>
    <string name="hint_password_asterix">Parolă *</string>
    <string name="email_missing">Te rog să introduci o adresă de mail</string>
    <string name="email_invalid">Nu pare sa fie o adresă de email validă</string>
    <string name="password_missing">Parola lipseste.</string>
    <string name="password_minimum">Parola este prea scurtă, minim 6 caractere</string>
    <string name="login">Login</string>
    <string name="hint_password_confirm">Confirmă parola</string>
    <string name="password_not_matching">Parola nu este aceeași</string>
    <string name="password_forgot">Parolă uitată</string>
    <string name="forgot_password">Ai uitat parola?</string>
    <string name="forgot_password_msg">Te rog să introduci mailul tău ca să îți putem trimite instrucțiunile de resetare.</string>
    <string name="btn_reset_password">Resetează</string>
    <string name="btn_resend_password">Retrimite</string>
    <string name="liked_jokes_title">Mi-au plăcut</string>
    <string name="tutorial1_title">Bine ai venit</string>
    <string name="tutorial1_text">Află în 5 pași cum funcționează Bancuri bune.</string>
    <string name="tutorial2_title">Adaugă un banc nou</string>
    <string name="tutorial2_text">Dă click pe iconița \“plus\” că să adaugi un banc nou. După ce este aprobat de un moderator, îl vei vedea în aplicație.</string>
    <string name="tutorial3_text">Aici găseșți bancurile care ți-au plăcut. Trimite-le prietenilor tăi!</string>
    <string name="tutorial3_title">Bancurile favorite</string>
    <string name="tutorial4_title">Pagina de profil</string>
    <string name="tutorial4_text">Aici găsești bancurile adăugate, punctele adunate, precum și rangul curent.</string>
    <string name="tutorial5_text">Vezi cât de apreciate sunt bancurile tale, adună like-uri și crești în rangul peștilor. \n Hamsie (la 0 de like-uri)\n Hering (de la 25 de like-uri)\n Somon (de la 100 de like-uri)\n Știucă (de la 250 de like-uri)\n Rechin (de la 500 de like-uri)</string>
    <string name="tutorial5_title">Ranguri</string>
    <string name="tutorial6_title">Like și share</string>
    <string name="tutorial6_text">Arată că îți place bancul dând like și trimițându-l prietenilor tăi cu opțiunea share.</string>
    <string name="logout">Delogheză-te</string>
    <string name="no_joke_added">Nu ai adăugat nici un banc.</string>
    <string name="no_joke_liked">Nu ai dat like la nici un banc.</string>
    <string name="rating_text">Cum îți place aplicația până acum?</string>
    <string name="not_now">Mai târziu</string>
    <string name="feedback_sent">Am primit feedbackul tău!</string>
    <string name="rating_send_message">Trimite-ne un mesaj</string>
    <string name="rating_improve_question">Spune-ne ce putem îmbunătăți</string>
    <string name="rating_send">Trimite</string>
    <string name="rating_cancel">Anulează</string>
    <string name="share_open">Deschid opțiunile de share. Ai puțină răbdare</string>
    <string name="share_text">Descarcă gratuit aplicația Bancuri bune de pe Google Play: https://goo.gl/iFYPa4</string>
    <string name="permission_denied">Nu ai acceptat permisiunile. Pentru a putea da share trebuie să le accepți</string>
    <string name="leveled_up_message">Ai primit un nou rang!</string>
    <string name="forgot_password_resend">* Parola este necesară numai pentru retrimiterea emailului de confirmare</string>
    <string name="channel_name">general_notification_channel</string>
    <string name="nothing" />
    <string name="switchDB">Switch DB</string>

    <!--Pagina de rapoarte-->

    <string name="number_of_jokes">Numar total de bancuri: %s</string>
    <string name="report_app_name">Reports</string>
    <string name="number_of_points">%1$s se afla %2$s cu un numar total de %3$s puncte.</string>
    <string name="test_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="production_ad_id">ca-app-pub-7748272108558557/6099098244</string>
    <string name="share">Trimite</string>
    <string name="skip">Nu acum</string>
    <string name="getNewestJokes">Cele mai noi</string>
    <string name="getMostVotedJokes">Cele mai votate</string>

</resources>
