<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/include_app_bar"
        layout="@layout/app_bar_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            style="@style/logo"
            android:layout_weight="0.05"
            android:src="@drawable/login_logo" />

        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/etEmail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/etPassword"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/etPasswordConfirm"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_password_confirm"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        app:bootstrapSize="lg"
                        app:roundedCorners="true" />

                </LinearLayout>

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/btnRegister"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true" />

            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            tools:visibility="visible">

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="BallBeatIndicator" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>