<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/include_app_bar"
            layout="@layout/app_bar_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/profile_image"
                app:bootstrapBrand="info"
                app:bootstrapSize="xs"
                app:hasBorder="true" />

            <LinearLayout
                android:id="@+id/namePointsRank"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileName"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="Prenume Nume" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profilePoints"
                        style="@style/text.medium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill"
                        tools:text="Total puncte: 456" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profileRank"
                        style="@style/text.medium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill"
                        tools:text="Novice" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nextRank"
                        style="@style/text.medium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/nextRank" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <com.beardedhen.androidbootstrap.BootstrapButtonGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    app:roundedCorners="true"
                    app:bootstrapBrand="info"
                    app:bootstrapSize="lg"
                    app:buttonMode="radio">

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/btnGetNewestJokes"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:text="@string/getNewestJokes"
                        app:bootstrapBrand="info"
                        app:checked="true"
                        app:bootstrapSize="lg"
                        app:buttonMode="radio" />

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/btnGetMostVotes"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:text="@string/getMostVotedJokes"
                        app:bootstrapBrand="info"
                        app:bootstrapSize="lg"
                        app:buttonMode="radio" />

                </com.beardedhen.androidbootstrap.BootstrapButtonGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/empty_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible">

                <com.beardedhen.androidbootstrap.BootstrapWell
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    app:bootstrapSize="md">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/no_jokes" />

                        <TextView
                            android:id="@+id/no_jokes_added"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="@string/no_joke_added"
                            android:visibility="gone" />

                    </LinearLayout>

                </com.beardedhen.androidbootstrap.BootstrapWell>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:progressBarStyle"
                android:elevation="20dp"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <cazimir.com.bancuribune.utils.EmptyRecyclerView
                android:id="@+id/myJokesList"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/adBannerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:text="Adview" />
    </LinearLayout>

</LinearLayout>